--- a/rockman/rockman.vcxproj
+++ b/rockman/rockman.vcxproj
@@ -120,7 +120,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>./;./SFML-2.5.1/include;./Global;./Framework;./Scenes;./GameObjects;./DataTable;./Animation;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./;./SFML-2.5.1/include;./Global;./Framework;./Scenes;./GameObjects;./DataTable;./Animation;./State;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>Use</PrecompiledHeader>
     </ClCompile>
     <Link>
@@ -160,6 +160,7 @@
     <ClCompile Include="Framework\DataTableManager.cpp" />
     <ClCompile Include="Framework\Framework.cpp" />
     <ClCompile Include="Framework\InputMgr.cpp" />
+    <ClCompile Include="GameObjects\Block.cpp" />
     <ClCompile Include="GameObjects\GameObject.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -177,6 +178,7 @@
     <ClCompile Include="GameObjects\SpriteGo.cpp" />
     <ClCompile Include="Global\Variables.cpp" />
     <ClCompile Include="GameObjects\VertexArrayGo.cpp" />
+    <ClCompile Include="State\CharacterState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation\AnimationClip.h" />
@@ -185,6 +187,7 @@
     <ClInclude Include="DataTable\StringTable.h" />
     <ClInclude Include="Framework\DataTableManager.h" />
     <ClInclude Include="Framework\ObjectPool.h" />
+    <ClInclude Include="GameObjects\Block.h" />
     <ClInclude Include="GameObjects\GameObject.h" />
     <ClInclude Include="Global\Defines.h" />
     <ClInclude Include="Framework\Framework.h" />
@@ -198,6 +201,7 @@
     <ClInclude Include="Framework\SceneMgr.h" />
     <ClInclude Include="Global\Singleton.h" />
     <ClInclude Include="GameObjects\SpriteGo.h" />
+    <ClInclude Include="State\CharacterState.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Global\Variables.h" />
     <ClInclude Include="GameObjects\VertexArrayGo.h" />
