--- a/rockman/rockman.vcxproj
+++ b/rockman/rockman.vcxproj
@@ -196,6 +196,7 @@
     <ClInclude Include="Global\rapidcsv.h" />
     <ClInclude Include="Global\Utils.h" />
     <ClInclude Include="GameObjects\Player.h" />
+    <ClInclude Include="State\OnSlopeState.h" />
     <ClInclude Include="State\OnGroundState.h" />
     <ClInclude Include="State\JumpingState.h" />
     <ClInclude Include="Scenes\Scene.h" />
@@ -207,6 +208,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Global\Variables.h" />
     <ClInclude Include="GameObjects\VertexArrayGo.h" />
+    <ClInclude Include="State\WallDragState.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
