--- a/rockman/rockman.vcxproj
+++ b/rockman/rockman.vcxproj
@@ -172,6 +172,7 @@
     </ClCompile>
     <ClCompile Include="Framework\ResourceMgr.cpp" />
     <ClCompile Include="GameObjects\Player.cpp" />
+    <ClCompile Include="GameObjects\Monster.cpp" />
     <ClCompile Include="Scenes\Scene.cpp" />
     <ClCompile Include="Scenes\Stage1_1.cpp" />
     <ClCompile Include="Framework\SceneMgr.cpp" />
@@ -196,6 +197,7 @@
     <ClInclude Include="Global\rapidcsv.h" />
     <ClInclude Include="Global\Utils.h" />
     <ClInclude Include="GameObjects\Player.h" />
+    <ClInclude Include="GameObjects\Monster.h" />
     <ClInclude Include="State\OnSlopeState.h" />
     <ClInclude Include="State\OnGroundState.h" />
     <ClInclude Include="State\JumpingState.h" />
